# Gladdon-s-solution-to-education

./: .gitignore  .pr_agent.toml  .supermemory-id  AGENTS.md  Macroscope.md  README.md  greptile.json  pyproject.toml  setup_startup.ps1  startup_sync.bat
.github/workflows/: pr-bot-aggregator.yml
.opencode/: worktree-session-state.json
.sisyphus/: boulder.json
.sisyphus/plans/: canvas-obsidian-sync.md
Project-obsidian-vault/UIUC education/: TODO.md
RESEARCH/: opencode-error-final-report.md  opencode-error-investigation.md
cs 225/: AGENTS.md
cs 225/lab_debug/: README.md
cs 225/mp_stickers/: REPO_LOCATION.md
sped 117/: issue_brief_transcript.md
sped 117/week 1/: en-Why many autistic people DON'T like person-first language [Qcvge5ypbbA].txt  en-Words Count： People First Language Explained [OWnMp07BqUQ].txt
sped 117/week 2/: Week 2 Readings - No Pity Chapter 2.md  en-Remembering Judy Heumann's lasting contributions to disability rights [p57NyoqpO_E].txt  en-The Path Forward： Remembering Willowbrook - Full Documentary [ev80qEtp2u4].txt  week 2 overview.md
sped 117/week 3/: BLS Labor Force Statistics 2024.md  Dell Neurodiversity Program.md  Microsoft Neurodiversity Program.md  Week 3 Overview.md  Week 3 Readings.html  Week 3 Readings.md
src/canvas_sync.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stat 410/: concepts_summary.md  hw01_solution.tex  hw02_solution.tex
tests/: test_assignment_sync.py  test_auth.py  test_calendar_sync.py  test_courses.py  test_example.py  test_scheduler.py  test_structure.py  test_web.py
(+38 files in other folders)
